// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypesPage filters data based on search value 1`] = `
<div>
  <Flex
    as="span"
    direction="row"
    elementRef={[Function]}
    inline={false}
    justifyItems="start"
    visualDebug={false}
    wrapItems={false}
  >
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={true}
      shrink={true}
    >
      <Heading
        border="none"
        color="inherit"
        ellipsis={false}
        level="h1"
        margin="medium"
      >
        Types
      </Heading>
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      margin="small"
      shrink={false}
    >
      <TextInput
        display="block"
        inputContainerRef={[Function]}
        inputRef={[Function]}
        interaction="enabled"
        isRequired={false}
        messages={Array []}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        renderLabel="Search"
        size="medium"
        textAlign="start"
        type="text"
        value="Type 1"
      />
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      shrink={false}
    >
      <Button
        as="button"
        buttonRef={[Function]}
        cursor="pointer"
        fluidWidth={false}
        margin="0"
        onClick={[Function]}
        size="medium"
        type="button"
        variant="default"
      >
        Add Type
      </Button>
    </FlexItem>
  </Flex>
  <Table
    caption="Types"
    hover={true}
    layout="auto"
  >
    <Head>
      <Row>
        <ColHeader
          id="name"
          onRequestSort={[Function]}
          sortDirection="ascending"
          textAlign="start"
        >
          Name
        </ColHeader>
        <ColHeader
          id="Equipment"
          sortDirection="none"
          textAlign="start"
          width="2%"
        />
        <ColHeader
          id="Delete"
          sortDirection="none"
          textAlign="start"
          width="2%"
        />
      </Row>
    </Head>
    <Body>
      <Row
        key="1"
      >
        <Cell
          textAlign="start"
        >
          Type 1
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-name="Type 1"
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Show Equipment
          </Button>
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-id={1}
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Delete
          </Button>
        </Cell>
      </Row>
    </Body>
  </Table>
</div>
`;

exports[`TypesPage renders an error if load fails 1`] = `
<Alert
  liveRegionPoliteness="assertive"
  margin="x-small 0"
  open={true}
  screenReaderOnly={false}
  timeout={0}
  transition="fade"
  variant="error"
>
  some error
</Alert>
`;

exports[`TypesPage renders data if load succeeds 1`] = `
<div>
  <Flex
    as="span"
    direction="row"
    elementRef={[Function]}
    inline={false}
    justifyItems="start"
    visualDebug={false}
    wrapItems={false}
  >
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={true}
      shrink={true}
    >
      <Heading
        border="none"
        color="inherit"
        ellipsis={false}
        level="h1"
        margin="medium"
      >
        Types
      </Heading>
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      margin="small"
      shrink={false}
    >
      <TextInput
        display="block"
        inputContainerRef={[Function]}
        inputRef={[Function]}
        interaction="enabled"
        isRequired={false}
        messages={Array []}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        renderLabel="Search"
        size="medium"
        textAlign="start"
        type="text"
        value=""
      />
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      shrink={false}
    >
      <Button
        as="button"
        buttonRef={[Function]}
        cursor="pointer"
        fluidWidth={false}
        margin="0"
        onClick={[Function]}
        size="medium"
        type="button"
        variant="default"
      >
        Add Type
      </Button>
    </FlexItem>
  </Flex>
  <Table
    caption="Types"
    hover={true}
    layout="auto"
  >
    <Head>
      <Row>
        <ColHeader
          id="name"
          onRequestSort={[Function]}
          sortDirection="ascending"
          textAlign="start"
        >
          Name
        </ColHeader>
        <ColHeader
          id="Equipment"
          sortDirection="none"
          textAlign="start"
          width="2%"
        />
        <ColHeader
          id="Delete"
          sortDirection="none"
          textAlign="start"
          width="2%"
        />
      </Row>
    </Head>
    <Body>
      <Row
        key="1"
      >
        <Cell
          textAlign="start"
        >
          Type 1
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-name="Type 1"
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Show Equipment
          </Button>
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-id={1}
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Delete
          </Button>
        </Cell>
      </Row>
      <Row
        key="2"
      >
        <Cell
          textAlign="start"
        >
          Type 2
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-name="Type 2"
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Show Equipment
          </Button>
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-id={2}
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Delete
          </Button>
        </Cell>
      </Row>
      <Row
        key="3"
      >
        <Cell
          textAlign="start"
        >
          Type 3
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-name="Type 3"
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Show Equipment
          </Button>
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-id={3}
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Delete
          </Button>
        </Cell>
      </Row>
    </Body>
  </Table>
</div>
`;

exports[`TypesPage renders spinner if not yet loaded 1`] = `
<Spinner
  as="div"
  renderTitle="Loading"
  size="large"
  variant="default"
/>
`;

exports[`TypesPage sorts data ascending when name column header is clicked twice 1`] = `
<div>
  <Flex
    as="span"
    direction="row"
    elementRef={[Function]}
    inline={false}
    justifyItems="start"
    visualDebug={false}
    wrapItems={false}
  >
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={true}
      shrink={true}
    >
      <Heading
        border="none"
        color="inherit"
        ellipsis={false}
        level="h1"
        margin="medium"
      >
        Types
      </Heading>
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      margin="small"
      shrink={false}
    >
      <TextInput
        display="block"
        inputContainerRef={[Function]}
        inputRef={[Function]}
        interaction="enabled"
        isRequired={false}
        messages={Array []}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        renderLabel="Search"
        size="medium"
        textAlign="start"
        type="text"
        value=""
      />
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      shrink={false}
    >
      <Button
        as="button"
        buttonRef={[Function]}
        cursor="pointer"
        fluidWidth={false}
        margin="0"
        onClick={[Function]}
        size="medium"
        type="button"
        variant="default"
      >
        Add Type
      </Button>
    </FlexItem>
  </Flex>
  <Table
    caption="Types"
    hover={true}
    layout="auto"
  >
    <Head>
      <Row>
        <ColHeader
          id="name"
          onRequestSort={[Function]}
          sortDirection="ascending"
          textAlign="start"
        >
          Name
        </ColHeader>
        <ColHeader
          id="Equipment"
          sortDirection="none"
          textAlign="start"
          width="2%"
        />
        <ColHeader
          id="Delete"
          sortDirection="none"
          textAlign="start"
          width="2%"
        />
      </Row>
    </Head>
    <Body>
      <Row
        key="1"
      >
        <Cell
          textAlign="start"
        >
          Type 1
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-name="Type 1"
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Show Equipment
          </Button>
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-id={1}
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Delete
          </Button>
        </Cell>
      </Row>
      <Row
        key="2"
      >
        <Cell
          textAlign="start"
        >
          Type 2
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-name="Type 2"
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Show Equipment
          </Button>
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-id={2}
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Delete
          </Button>
        </Cell>
      </Row>
      <Row
        key="3"
      >
        <Cell
          textAlign="start"
        >
          Type 3
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-name="Type 3"
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Show Equipment
          </Button>
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-id={3}
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Delete
          </Button>
        </Cell>
      </Row>
    </Body>
  </Table>
</div>
`;

exports[`TypesPage sorts data descending when name column header is clicked 1`] = `
<div>
  <Flex
    as="span"
    direction="row"
    elementRef={[Function]}
    inline={false}
    justifyItems="start"
    visualDebug={false}
    wrapItems={false}
  >
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={true}
      shrink={true}
    >
      <Heading
        border="none"
        color="inherit"
        ellipsis={false}
        level="h1"
        margin="medium"
      >
        Types
      </Heading>
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      margin="small"
      shrink={false}
    >
      <TextInput
        display="block"
        inputContainerRef={[Function]}
        inputRef={[Function]}
        interaction="enabled"
        isRequired={false}
        messages={Array []}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        renderLabel="Search"
        size="medium"
        textAlign="start"
        type="text"
        value=""
      />
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      shrink={false}
    >
      <Button
        as="button"
        buttonRef={[Function]}
        cursor="pointer"
        fluidWidth={false}
        margin="0"
        onClick={[Function]}
        size="medium"
        type="button"
        variant="default"
      >
        Add Type
      </Button>
    </FlexItem>
  </Flex>
  <Table
    caption="Types"
    hover={true}
    layout="auto"
  >
    <Head>
      <Row>
        <ColHeader
          id="name"
          onRequestSort={[Function]}
          sortDirection="descending"
          textAlign="start"
        >
          Name
        </ColHeader>
        <ColHeader
          id="Equipment"
          sortDirection="none"
          textAlign="start"
          width="2%"
        />
        <ColHeader
          id="Delete"
          sortDirection="none"
          textAlign="start"
          width="2%"
        />
      </Row>
    </Head>
    <Body>
      <Row
        key="3"
      >
        <Cell
          textAlign="start"
        >
          Type 3
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-name="Type 3"
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Show Equipment
          </Button>
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-id={3}
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Delete
          </Button>
        </Cell>
      </Row>
      <Row
        key="2"
      >
        <Cell
          textAlign="start"
        >
          Type 2
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-name="Type 2"
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Show Equipment
          </Button>
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-id={2}
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Delete
          </Button>
        </Cell>
      </Row>
      <Row
        key="1"
      >
        <Cell
          textAlign="start"
        >
          Type 1
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-name="Type 1"
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Show Equipment
          </Button>
        </Cell>
        <Cell
          textAlign="start"
        >
          <Button
            as="button"
            buttonRef={[Function]}
            cursor="pointer"
            data-id={1}
            fluidWidth={false}
            margin="0"
            onClick={[Function]}
            size="medium"
            type="button"
            variant="default"
          >
            Delete
          </Button>
        </Cell>
      </Row>
    </Body>
  </Table>
</div>
`;
